DP: aggiornata tabella delle modifiche

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -180,21 +180,25 @@ Il presente documento descrive in modo dettagliato le classi e i relativi metodi
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
         1.0 &    07$\slash$03$\slash$2009 Modifica per rilascio RQ & Dissegna Stefano \\
         \hline        
-        0.7 &    03$\slash$03$\slash$2009 Descritta classe Clean e metodo della classe File & Dal Bosco Davide \\
+        0.9 &    25$\slash$02$\slash$2009 Descrizione classi e metodi GUI & Rizzo Maurizio \\
+        \hline        
+        0.8 &    16$\slash$02$\slash$2009 Descrizione classe Rotation e metodo clone nella classe figure & Rizzo Maurizio \\
+        \hline        
+        0.7 &    11$\slash$02$\slash$2009 Descritta classe Clean e metodo della classe File & Dal Bosco Davide \\
+        \hline	
+        0.6 &    09$\slash$02$\slash$2009 Descritte classi Scale, MoveViewButton e aggiornato Visualization & Dissegna Stefano \\
+        \hline		
+        0.5 &    07$\slash$02$\slash$2009 Descritte classi Request, Server, File e la gestione degli errori & Dal Bosco Davide \\
         \hline
-        0.6 &    02$\slash$03$\slash$2009 Descritte classi Request, Server, File e la gestione degli errori & Dal Bosco Davide \\
-        \hline
-        0.5 &    27$\slash$02$\slash$2009 Descritte classi Scale, MoveViewButton e aggiornato Visualization & Dissegna Stefano \\
-        \hline
-    	0.4 &    25$\slash$02$\slash$2009 Descrizione classi e metodi GUI & Rizzo Maurizio \\
+    	0.4 &    06$\slash$02$\slash$2009 Descrizione classi e metodi salvataggio & Cunico Marco \\
 		\hline
-    	0.3 &    20$\slash$02$\slash$2009 Descrizione classe Rotation e metodo clone nella classe figure & Rizzo Maurizio \\
+    	0.3 &    05$\slash$02$\slash$2009 Descrizione classi e metodi caricamento & Geremia Mirco \\
     	\hline
-    	0.2 &    19$\slash$02$\slash$2009 Descrizione classi interfaccia grafica & Bizzotto Piero \\
+    	0.2 &    03$\slash$02$\slash$2009 Descrizione classi interfaccia grafica & Bizzotto Piero \\
         \hline
-        0.1 & 	 17$\slash$02$\slash$2009 Descritte classi e metodi delle figure e delle propriet\`a & Dissegna Stefano \\
+        0.1 & 	 03$\slash$02$\slash$2009 Descritte classi e metodi delle figure e delle propriet\`a & Dissegna Stefano \\
 		\hline
-    	0.0 & 	 11$\slash$02$\slash$2009 Bozza & Dissegna Stefano \\
+    	0.0 & 	 02$\slash$02$\slash$2009 Bozza & Dissegna Stefano \\
 
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
