ST: tabella approvatori

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -106,12 +106,8 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			\multirow{1}{*}{RPP-RQ} &  Cunico Marco \\
-									
-			\hline
-			\multirow{1}{*}{RQ-RA} & \\
-									
-			\hline
+			\multirow{1}{*}{RPP-RQ} &  Bizzotto Piero \\
+				\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
 		\caption{Lista Verificatori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -119,7 +115,7 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 	\end{center}
 \end{table}
 
-
+\newpage
   
 \section*{\LARGE Approvazione:}
 \begin{table}[!h]
@@ -145,7 +141,7 @@ Il presente documento si propone di fornire la documentazione di supporto necess
 \end{table}
  
 \textbf{}
-\newpage
+
 \section*{\LARGE Lista di Distribuzione:}
  
   \begin{elenconumerato}{\normindent}
