modificato diagramma classi ServerLogic

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -391,7 +391,7 @@ L'importazione di un file SVG viene gestita dalla classe \textit{SVGReader} attr
 \subsubsezione{DocBackend - Lato Server}
 \begin{figure}[!ht]
 \centering
-\includegraphics{images/ServerLogic.jpg}\\
+\includegraphics[width=15cm]{images/ServerLogic.png}\\
 \caption{ServerLogic}
 \end{figure}
 
