modifiche alla parte ServerLogic

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -395,7 +395,7 @@ L'importazione di un file SVG viene gestita dalla classe \textit{SVGReader} attr
 \caption{ServerLogic}
 \end{figure}
 
-In AJAXDRAW \`e necessaria la presenza di una parte server, visto il modello client-server dell'applicazione. La parte server ha funzionalit\`a minimali, ma fondamentali per permettere il funzionamento dell'intero sistema. Le sue funzioni, oltre a quella di essere un webserver e fornire la pagina HTML al client, sono esclusivamente quelle di permettere un salvataggio in formato SVG del disegno effettuato sul client, effettuare il caricamento di un file residente sul disco del client e fornire l'accesso al manuale utente. Come si vede nella figura 6, questo sottosistema \`e composto lato client da una classe \textit{Document} che si occupa delle comunicazioni con il server, nella quale sono presenti i metodi \textit{save} e \textit{load}. Questi metodi permettono l'invio di una richiesta al server, rappresentata dalla classe \textit{Request}, la quale, lato server, fornisce il metodo \textit{acceptRequest} per accettare una richiesta. La classe \textit{Server} contiene tre metodi: \textit{getSave} che riceve un documento e lo salva su disco, \textit{getLoad} che permette di caricare un file presente sul disco del client e \textit{getHTML} che fornisce le pagine HTML ed i file statici, compreso il manuale utente. La classe \textit{File} rappresenta un file che risiede sul disco del server, il quale pu\`o essere prelevato tramite \textit{getFile} o cancellato tramite \textit{deleteFile}. La classe \textit{Clean} contiene il metodo \textit{sweeper} il quale elimina i file generati dal client che sono gi\`a stati scaricati oppure che non verranno usati, in modo da evitare che questi file presenti temporaneamente sul server non lo intasino. La classe lato client \textit{StaticDocument}, tramite il metodo \textit{get} permette di inviare una richiesta al server per ottenere il manuale utente. Sono presenti inoltre delle classi che permettono la gestione di eccezioni: pu\`o verificarsi un errore di comunicazione (rappresentato dall'interfaccia \textit{CommunicationError} e dalle classi \textit{ConnectionError} e \textit{ServerError} con relativi metodi che la implementano), o un errore di file non trovato. Questo tipo di eccezione \`e rappresentato dalla classe \textit{FileNotFound} con il relativo metodo \textit{getFileError}. 
+In AJAXDRAW \`e necessaria la presenza di una parte server, visto il modello client-server dell'applicazione. La sua funzione \`e quella di permettere le operazioni di salvataggio e di caricamento di file SVG. Inoltre, svolge la funzione di web server per fornire al client la pagina dell'applicazione. Come si vede dalla figura 13, in seguito ad una richiesta del client (rappresentato da \textit{Document}) di un salvataggio o caricamento, viene contattato il server per l'inoltro della richiesta. La richiesta viene gestita dalla classe \textit{Request}, la quale, lato server, fornisce il metodo \textit{service} per accettare la richiesta stessa. La classe \textit{Server} contiene due metodi: \textit{getSave} che riceve un documento e lo salva su disco, \textit{getLoad} che permette di caricare un file presente sul disco del client. La classe \textit{File} gestisce le operazioni sui files che risiedono sul disco del server, e permette di prelevare un file tramite \textit{getFile} o cancellarlo tramite \textit{deleteFile}. La classe \textit{Clean} contiene il metodo \textit{sweeper} il quale elimina i file generati dal client che sono gi\`a stati scaricati, oppure che non verranno usati, in modo da evitare che questi file presenti temporaneamente sul server non lo intasino. La classe lato client \textit{StaticDocument}, tramite il metodo \textit{get} permette di inviare una richiesta al server per ottenere il manuale utente. Sono presenti inoltre delle classi che permettono la gestione di eccezioni: pu\`o verificarsi un errore di comunicazione (rappresentato dall'interfaccia \textit{CommunicationError} e dalle classi \textit{ConnectionError} e \textit{ServerError} con relativi metodi che la implementano), o un errore di file non trovato. Questo tipo di eccezione \`e rappresentato dalla classe \textit{FileNotFound} con il relativo metodo \textit{getFileNotFound}. 
 
 
 \sezione{Descrizione dei singoli componenti}
