--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Lettera di Presentazione} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -54,32 +54,32 @@ Alla cortese attenzione dei committenti :
 \item Azienda Zucchetti SPA , nella veste di proponente
 \end{list}
 
-Con la presente la ditta WebShape intende ufficializzare, in data 09/12/2008, la sua partecipazione alla gara di appalto per il capitolato C04 "Software per il disegno grafico in tecnologie web" (in seguito definito "AJAXDRAW"). Il rilascio finale del prodotto \`e previsto dall' azienda per la fine del secondo trimestre universitario, indicativamente verso fine Marzo 2009 ed inizio Aprile dello stesso anno. 
+Con la presente la ditta WebShape consegna il materiale necessario a sostenere la Revisione di Qualifica. \\
+In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Progetto Preliminare, e se ne sono aggiunti altri come previsto dal processo di documentazione. Si allega inoltre il codice in fase di conclusione, a testimonianza che il prodotto \`e oramai concluso.
 
-\section{Licenza di distribuzione del prodotto} 
-WebShape, dopo un'attenta analisi, ha deciso di adottare per il progetto la licenza GPL, in quanto garantisce che il prodotto sia e rimanga liberamente utilizzabile, modificabile e distribuibile. Inoltre assicura che eventuali modifiche ad opera di terzi godano anch'esse delle suddette caratteristiche.
 
-\section{Sistema di versionamento dei file} 
-Il sistema di nomenclatura dei file usato da WebShape non prevede l'inserimento della versione attuale del documento nel nome del file. Il sistema di configurazione e versionamento adottato dall' azienda \`e tale che la versione visibile sia sempre quella piu' aggiornata. Tuttavia solo i documenti che saranno consegnati per le revisioni avranno la versione nel nome del file. 
-
-\section{Documenti consegnati}
-Per la Revisione dei Requisiti verranno consegnati i seguenti documenti: 
+\section{Materiale consegnato}
+Per la Revisione di Qualifica si consegna il seguente materiale: 
 \subsection{Documenti interni}
 \begin{list}{-}{}
-\item Norme di progetto (NormeDiProgetto1.0.pdf)
-\item Studio di fattibilit\`a (StudioDiFattiblit\`a1.0.pdf)
+\item Norme di progetto (NormeDiProgetto3.0.pdf)
 \end{list}
 \subsection{Documenti esterni}
 \begin{list}{-}{}
-\item Analisi dei requisiti (AnalisiDeiRequisiti1.0.pdf)
-\item Aspettative (Aspettative.pdf)
+\item Analisi dei requisiti (AnalisiDeiRequisiti3.0.pdf)
+\item Definizione di prodotto (DefinizioneDiProdotto1.0.pdf)
 \item Diagramma di Gantt per le attivit\`a (Pianifica.png)
 \item Diagramma di Gantt per le risorse (PianificaRisorse.png)
-\item Glossario (Glossario1.0.pdf)
+\item Glossario (Glossario3.0.pdf)
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
-\item Piano di progetto (PianoDiProgetto1.0.pdf)
-\item Piano di qualifica (PianoDiQualifica1.0.pdf)
-\item Relazione dell'incontro con i committenti (RelazioneIncontro1.0.pdf)
+\item Manuale utente (ManualeUtente1.0.pdf)
+\item Piano di progetto (PianoDiProgetto3.0.pdf)
+\item Piano di qualifica (PianoDiQualifica3.0.pdf)
+\item Specifica tecnica (SpecificaTecnica2.0.pdf)
+\end{list}
+\subsection{Codice sorgente}
+\begin{list}{-}{}
+\item Codice sorgente e test (ajaxdraw.tar.gz)
 \end{list}
 
 \end{document}
