--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -55,7 +55,7 @@ Alla cortese attenzione dei committenti :
 \end{list}
 
 Con la presente la ditta WebShape consegna il materiale necessario a sostenere la Revisione di Qualifica. \\
-In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Progetto Preliminare, e se ne sono aggiunti altri come previsto dal processo di documentazione. Si allega inoltre il codice in fase di conclusione, a testimonianza che il prodotto \`e oramai concluso.
+In particolare sono stati aggiornati alcuni documenti in seguito all'esito della Revisione di Progetto Preliminare, e se ne sono aggiunti altri come previsto dal processo di documentazione. Si allega inoltre il codice in fase di conclusione: \`e possibile provare il prodotto aprendo il file ajaxdraw/page/index.html con un browser supportato; tuttavia, mancando il collegamento con il server, non \`e possibile avvalersi delle funzioni di caricamento e salvataggio files.
 
 
 \section{Materiale consegnato}
