--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{2.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{3.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -80,11 +80,11 @@ Versione: \insertversion
 				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\hline
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%		
-				{Pre-RR} &  Bizzotto Piero \\ & Geremia Mirco \\
+				\multirow{2}{*}{Pre-RR} &  Bizzotto Piero \\ & Geremia Mirco \\
 				\hline
-				{RR-RPP} &  Cunico Marco \\ & Dissegna Stefano \\
+				\multirow{2}{*}{RR-RPP} &  Cunico Marco \\ & Dissegna Stefano \\
 				\hline
-				{RPP-RQ} &  Cunico Marco \\ \\
+				{RPP-RQ} &  Cunico Marco \\ 
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
@@ -92,6 +92,33 @@ Versione: \insertversion
 			\label{tabredazione}
 		\end{center}
 	\end{table}
+
+\section*{\LARGE Verifica:}
+
+\begin{table}[!h]
+	\begin{center}
+		\begin{tabular}
+			{|c|c|}
+			\hline
+			%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			\multicolumn{2}{|c|}{ \textbf{Verifica} } \\
+			\hline
+			\textbf{Fase} & \textbf{Verificatori} \\
+			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%
+			\hline
+			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+			{Pre-RR} &  Dissegna Stefano \\
+			\hline
+			{RR-RPP} & Geremia Mirco \\
+			\hline
+			{RPP-RQ} & Carollo Mirko\\
+			\hline
+			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+		\caption{Lista Verificatori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+		\label{tabverifica}
+	\end{center}
+\end{table}
 	
 \section*{\LARGE Approvazione:}
 
@@ -107,11 +134,11 @@ Versione: \insertversion
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			{Pre-RR} &  Dissegna Stefano \\
+			{Pre-RR} &  Dal Bosco Davide \\
 			\hline
-			{RR-RPP} & Geremia Mirco \\
+			{RR-RPP} & Bizzotto Piero \\
 			\hline
-			{RPP-RQ} & \\
+			{RPP-RQ} & Rizzo Maurizio\\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -144,6 +171,8 @@ Versione: \insertversion
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			3.0 & 07/03/2009 Rilascio per RQ & Cunico Marco\\
+			\hline
 			2.2 & 06$\slash$03$\slash$2009 Aggiunta altri termini & Cunico Marco \\
 			\hline
 			2.1 & 10$\slash$02$\slash$2009 Aggiunta altri termini & Cunico Marco \\
